<resources>
    <string name="start">VAVAVA</string>
    <string name="stop">TATE QUIETO</string>
    <string name="finish">Finalizar</string>
    <string name="rounds">Round 1</string>
    <string name="time_running">Running Time</string>
    <string name="time_walking">Walking Time</string>
    <string name="walking_clock">00:00</string>
    <string name="init_stop_watch_value">00:00:00</string>

    <string name="hard_volumen">Volumen de Música Cañera</string>
    <string name="soft_volumen">Volumen de Música Tranqui</string>
    <string name="notification_volumen">Volumen de Notificaciones</string>
    <string name="hard_position">00:00:00</string>
    <string name="hard_duration">01:00:00</string>
    <string name="soft_position">00:00:00</string>
    <string name="soft_duration">01:00:00</string>

    <string name="PopUpTotalRuns">Carrera: </string>
    <string name="PopUpTotalDistance">Kms acumulados: </string>
    <string name="PopUpTotalTime">Total time: </string>
    <string name="NoDataWarning">No hay datos registrados. Recuerda activar el GPS si deseas información de tu carrera</string>

    <string name="PopUpDurationTitle">DURACION</string>
    <string name="PopUpChallengeTitle">OBJETIVO</string>
    <string name="PopUpIntervalTitle">INTERVALOS</string>
    <string name="PopUpDistanceTitle">DISTANCIA</string>
    <string name="PopUpAvgSpeedTitle">VELOCIDAD PROMEDIO</string>
    <string name="PopUpMaxSpeedTitle">VELOCIDAD MÁXIMA</string>
    <string name="PopUpUnevennessTitle">DESNIVEL</string>

    <string name="textNull"></string>
    <string name="textNoData">-</string>

    <string name="medalDistanceDescription">Distancia [Record Personal]</string>
    <string name="medalAvgSpeedDescription">Vel. Máx. [Record Personal]</string>
    <string name="medalMaxSpeedDescription">Vel. Prom. [Record Personal]</string>

    <string name="app_name">WildRunning</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">Olvidaste tu contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="resetPassword">Enviar Contraseña</string>
    <string name="invitation">¿Hasta qué nivel eres capaz de llegar?</string>
    <string name="accept">He leído y acepto los</string>
    <string name="terms">términos y condiciones de uso.</string>
    <string name="empty_email">Introduce un email</string>
    <string name="invalid_email">mmm parece que el email está mal escrito</string>
    <string name="google">INICIAR SESION</string>
    <string name="facebook">FACEBOOK</string>
    <string name="bar_title_terms">Términos y Condiciones de Uso</string>
    <string name="terms1">By downloading, installing, or otherwise using WildRunning, you hereby consent to these Terms and Conditions and agree to abide by them. If you do not agree to these Terms and Conditions, please do not use our mobile application. Additionally, by using our mobile application, you consent to the collection and use of your information as outlined in our Privacy Policy.</string>
    <string name="terms2">WildRunning is designed to provide sport tracking. You agree to use the mobile application only for lawful purposes and in a manner consistent with all applicable laws and regulations. You are prohibited from using the mobile application in any way that could damage, disable, overburden, or impair our servers or networks, or interfere with any other party\'s use and enjoyment of the mobile application.</string>
    <string name="terms3">In no event shall WildRunning, nor any of its officers, directors, and employees, be liable to you for anything arising out of or in any way connected with your use of WildRunning, whether such liability is under contract, tort, or otherwise, and WildRunning, including its officers, directors, and employees, shall not be liable for any indirect, consequential, or special liability arising out of or in any way related to your use of this mobile application.</string>

    <string name="bar_title">WildRunning</string>
    <string name="menu_running">Running</string>
    <string name="menu_record">Historial</string>
    <string name="menu_becamepremium">Hazte Premium</string>
    <string name="menu_clearpreferences">Reestablecer Ajustes</string>
    <string name="menu_signout">Cerrar Sesión</string>
    <string name="menu_offercourse">¿Quieres aprender a desarrollar apps? Entra aquí</string>

    <string name="nav_hi">Quien mueve las priernas mueve el corazón. ¡Muévete, corazón!</string>
    <string name="user">user@wildrunning.com</string>
    <string name="level">Nivel</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="toolbar_record">Registros</string>

    <string name="orderby_dateZA">Fecha (Recientes primero)</string>
    <string name="orderby_durationZA">Duración (Mayores primero)</string>
    <string name="orderby_distanceZA">Distancia (Mayores primero)</string>
    <string name="orderby_avgspeedZA">Vel. Prom. (Mayores primero)</string>
    <string name="orderby_maxspeedZA">Vel. Máx. (Mayores primero)</string>

    <string name="orderby_dateAZ">Fecha (Últimos primero)</string>
    <string name="orderby_durationAZ">Duración (Menores primero)</string>
    <string name="orderby_distanceAZ">Distancia (Menores primero)</string>
    <string name="orderby_avgspeedAZ">Vel. Prom. (Menores primero)</string>
    <string name="orderby_maxspeedAZ">Vel. Máx. (Menores primero)</string>

</resources>