<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark"
    android:orientation="vertical">

    <ImageView
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:src="@drawable/banner" />

    <TextView
        android:id="@+id/txtInvitation"
        style="@style/viewCustom"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/invitation"
        android:textColor="@color/orange"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email"
        style="@style/viewCustom"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColor="@color/gray"
        android:backgroundTint="@color/gray"
        android:autofillHints="Email" />
    <EditText
        android:id="@+id/password"
        style="@style/viewCustom"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="@color/gray"
        android:backgroundTint="@color/gray"
        android:autofillHints="contraseña"/>

    <TextView
        android:id="@+id/txtSesion"
        style="@style/viewCustom"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@color/green"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        style="@style/viewCustom"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/forgotPassword"
        android:textColor="@color/gray"
        android:textSize="13sp"/>
</LinearLayout>